# flights-pipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  redis-prod.tf
.cloud/: alerts.tf  artifact_registry.tf  auth.tf  bigquery-dev.tf  bigquery-prod.tf  bigquery.tf  bigquery_dev.tf  bigquery_prod.tf  firestore-prod.tf  firestore.tf  firestore_dev.tf  gcs.tf  k8s.tf  k8s_dev.tf  k8s_prod.tf  log_sinks_dev.tf  log_sinks_dev_std_k8s.tf  log_sinks_prod.tf  log_sinks_prod_std_k8s.tf  main.tf  psdb.tf  psdb_dev.tf  psdb_prod.tf  pubsub-dev.tf  pubsub-prod.tf  pubsub.tf  pubsub_dev.tf  pubsub_prod.tf  redis-dev.tf  redis.tf  redis_dev.tf  redis_prod.tf  variables.tf
.github/: PULL_REQUEST_TEMPLATE.md  spire-ingest-api-scraper-deploy-dev.yaml  spire-ingest-job-publisher-ci.yaml  spire-ingest-resample-worker-dev.yaml
bq-to-postgres-util/: Dockerfile  Pipfile  README.md  eu_mrv.py  geography.py  main.py
common/: README.md  install_google_custom_metrics_adapter.sh
data/: README.md
docs/: CONTRIBUTING.md
emissions-report-datastore/: Dockerfile  Pipfile  README.md  environment.py  gcs_to_psdb.py  main.py
flight-emissions-report/: .gitignore  Dockerfile  Pipfile  README.md  bq_flights_report_daily.sql  cli.py  cli_runlist.sql  environment.py  exceptions.py  gaia_cli.py  gen_pdf.py  handlers.py  helpers.py  log.py  main_cron.py  schemas.py  scratch.py  services.py
flight-emissions-report-cache/: Dockerfile  Pipfile  README.md  data.py  fakedb.py  main.py  requirements.txt
flight-emissions-report-cache-builder/: main.py  requirements.txt
inventory-cache/: README.md
log-processor/: README.md  main.py  pyproject.toml
nat-track-cacher/: Pipfile  (+2 more)
(+361 files in other folders)
