[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flights-log-processor"
version = "0.1.0"
description = "Process Trajectory-Worker-Job-Factory GKE logs from GCS log sink"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Contrails Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pandas>=2.2.0",
    "google-cloud-storage>=3.7.0",
    "orjson>=3.9.10", # Faster JSON parsing than standard lib
    "smart_open[gcs]>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
log-processor = "main:main"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C901",  # mccabe complexity
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["log_processor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"